# skill-governance-control-plane

./: .gitignore  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: technical-debt.md
expected/: plan-create.json  plan-update.json
src/skillctl/: approvals.py  bootstrap.py  canonical.py  cli.py  config.py  errors.py  evidence.py  evidence_refs.py  inventory.py  ledger.py  models.py  planner.py  portal.py  projection.py  read_service.py  redaction.py  repository.py  runner.py  service.py
src/skillctl/adapters/: __init__.py  base.py  github.py  skillshare.py
src/skillctl/runtime_inventory/: __init__.py  discovery.py  models.py  service.py  store.py
src/skillctl/web/: __init__.py  app.py  inventory_presentation.py  presentation.py  readiness.py  routes.py  security.py
src/skillctl/web/static/: portal.css
src/skillctl/web/templates/: base.html  (+4 more)
tests/: conftest.py  test_approvals.py  test_canonical.py  test_cli.py  test_evidence.py  test_evidence_refs.py  test_github_adapter.py  test_inventory.py  test_ledger.py  test_models.py  test_planner.py  test_portal.py  test_projection.py  test_read_service.py  test_repository.py  test_runner.py  test_service.py  test_skillshare_adapter.py
tests/e2e/: test_mvp_acceptance.py
tests/runtime_inventory/: test_discovery.py  test_service.py  test_store.py
tests/web/: conftest.py  test_decision.py  test_inventory_presentation.py  test_portal_desktop.py  test_portal_mobile.py  test_presentation.py  test_readiness.py  test_routes.py
(+9 files in other folders)
