[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skill-governance-control-plane"
version = "0.1.0"
description = "A local SkillOps inventory and governance workbench for multiple AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "PANGKAIFENG" }]
keywords = ["ai-agents", "skills", "skillops", "governance", "skillshare"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "pydantic>=2.9,<3",
  "typer>=0.12,<1",
  "PyYAML>=6,<7",
  "fastapi>=0.115,<1",
  "jinja2>=3.1,<4",
  "uvicorn>=0.34,<1",
  "python-multipart>=0.0.18,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-cov>=5,<7",
  "ruff>=0.9,<1",
  "mypy>=1.14,<2",
  "httpx>=0.28,<1",
  "playwright>=1.49,<2",
]

[project.scripts]
skillctl = "skillctl.cli:app"

[project.urls]
Homepage = "https://github.com/PANGKAIFENG/skill-governance-control-plane"
Repository = "https://github.com/PANGKAIFENG/skill-governance-control-plane"
Issues = "https://github.com/PANGKAIFENG/skill-governance-control-plane/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/skillctl"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
